[project]
name = "anarockone"
version = "0.1.0"
description = "Minimal FastAPI LLM API"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.12,<0.136.0",
    "langchain-core>=1.2.0,<2.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langserve>=0.3.1,<0.4.0",
    "pydantic>=2.10.6,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "sse-starlette>=2.3.5,<4.0.0",
    "uvicorn[standard]>=0.34.0,<0.39.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=8.0.0,<10.0.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
